Add body test to main.css file

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -3,5 +3,5 @@
 @tailwind utilities;
 
 body {
-  @apply bg-neutral-light text-neutral-dark font-sans;
+  @apply bg-red-primary text-neutral-dark font-sans;
 }
